# swiss-transport-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  claude_desktop_config.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  publish.yml
src/swiss_transport_mcp/: __init__.py  api_client.py  api_infrastructure.py  formation.py  occupancy.py  ojp_client.py  ojp_fare.py  server.py  siri_sx.py
src/swiss_transport_mcp/xml_templates/: location_coord_request.xml  location_request.xml  stop_event_request.xml  trip_request.xml
tests/: test_integration.py  test_server.py
