[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-transport-mcp"
version = "0.2.0"
description = "MCP Server for Swiss public transport – OJP journey planner, real-time departures, disruptions, occupancy, ticket prices, train formations and open data from opentransportdata.swiss"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Schulamt Stadt Zürich"},
]
keywords = [
    "mcp", "model-context-protocol", "swiss-transport", "ojp",
    "public-transport", "sbb", "open-data", "gtfs", "real-time",
    "switzerland", "zurich", "education", "siri-sx", "disruptions",
    "occupancy", "train-formation", "fare"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
swiss-transport-mcp = "swiss_transport_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_transport_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
ignore = ["E701", "E702"]  # Allow compact one-liners for readability
