[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "swiss-transport-mcp"
version     = "0.2.0"
description = "MCP Server for Swiss public transport -- OJP journey planner, real-time departures, disruptions, occupancy, ticket prices, train formations and open data from opentransportdata.swiss"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "mcp", "model-context-protocol", "swiss-transport", "ojp",
    "public-transport", "sbb", "open-data", "gtfs", "real-time",
    "switzerland", "zurich", "education", "siri-sx", "disruptions",
    "occupancy", "train-formation", "fare",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
swiss-transport-mcp = "swiss_transport_mcp.server:main"

[project.urls]
Homepage   = "https://github.com/malkreide/swiss-transport-mcp"
Repository = "https://github.com/malkreide/swiss-transport-mcp"
Issues     = "https://github.com/malkreide/swiss-transport-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_transport_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: live API tests (skipped in CI by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
